force-app/main/default/objects/Politics_Relationships__c/Politics_Relationships__c.object-meta.xml
<CustomObject>
    <label>Politics / Relationships</label>
    <nameField>
        <displayFormat>PL-{00}</displayFormat>
        <label>Politics / Relationships  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Politics / Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>