force-app/main/default/objects/Politics_Relationships__c/fields/Buyer_Location__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Location__c</fullName>
    <label>Buyer Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>