force-app/main/default/objects/Politics_Relationships__c/fields/Type_of_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Buyer__c</fullName>
    <label>Type of Buyer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>a</fullName>
            </value>
            <value>
                <fullName>b</fullName>
            </value>
            <value>
                <fullName>c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>