force-app/main/default/objects/Politics_Relationships__c/fields/Vender_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Vender_Preferences__c</fullName>
    <label>Vender Preferences</label>
    <length>50</length>
    <type>Text</type>
</CustomField>